--- a/docs/1.guide/1.index.md
+++ b/docs/1.guide/1.index.md
@@ -39,7 +39,7 @@ router.get(
 );
 ```
 
-Now run the development server using [unjs/listhen](https://listhen.unjs.io):
+Now run the development server using [unjs/listhen](https://github.com/unjs/listhen?tab=readme-ov-file#readme):
 
 ```sh
 npx --yes listhen -w --open ./app.ts
